cmake_minimum_required(VERSION 3.10)
project(Tarea3)
set(CMAKE_CXX_STANDARD 11)
include_directories (include)
find_package( OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})
add_executable(Tarea3 main.cpp)
target_link_libraries( Tarea3 ${OpenCV_LIBS} )